--- a/PVD/src/main/resources/application.properties
+++ b/PVD/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 server.port=9090
+
+spring.datasource.url=jdbc:mysql://localhost:3306/pvd
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#View eql
+
+spring.jpa.properties.hibernate.show_sql = true
+spring.jpa.properties.hibernate.format_sql= true
+
+#dialect
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.hibernate.ddl-auto=update
